# charli3-push-oracle-sdk

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  flake.nix  mint_script.plutus  oracleV2.plutus  oracleV3.cbor  pyproject.toml  requirements.txt  sample-oracle-deploy.yml  sample-oracle-owner-actions.yml  sample-run-node-simulator.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: integration_tests.yml  pre-commit.yml
charli3_offchain_core/: __init__.py  aggregate_conditions.py  chain_query.py  consensus.py  datums.py  mint.py  node.py  oracle_checks.py  oracle_owner.py  oracle_start.py  owner_script.py  redeemers.py  tx_validation.py
charli3_offchain_core/backend/: __init__.py  api.py  kupo.py
charli3_offchain_core/backend/utils/: __init__.py
charli3_offchain_core/utils/: decimal_encoder.py  exceptions.py  logging_config.py
integration-tests/: configuration.yml  run_integration_tests.sh
integration-tests/config/: env  node.properties
integration-tests/plutus_scripts/: oracleV3.cbor
integration-tests/scripts/: cardano-cli.sh  docker-compose.yml  info.sh  ssh.sh  yaci-cli.sh
integration-tests/tests/: base.py  owner_actions.py  test_add_funds.py  test_add_nodes.py  test_aggregate.py  test_deployment.py  test_edit_settings.py  test_multisig_deploy.py  test_multisig_ref_script.py  test_multisig_remove_nodes.py  test_node_collect.py  test_oracle_close.py  test_platform_collect.py  test_plutus.py  test_reference_script.py  test_remove_nodes.py
scripts/: cli_common.py  oracle_deploy.py  oracle_owner_actions.py  run_minting.py  run_minting_simple.py  run_simulation.py  send-ada.py  send_ada.py
src/: __init__.py  aggregate_conditions.py  chain_query.py  consensus.py  datums.py  main.py  mint.py  node.py  oracle_checks.py  oracle_owner.py  oracle_start.py  owner_script.py  redeemers.py  run_minting.py  run_simulation.py  send-ada.py  wallet.py
