[tool.poetry]
name = "charli3-offchain-core"
version = "0.1.0"
description = "Offchain core Python package for Charli3"
authors = ["Deep Bhatt <deep.bhatt@charli3.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pycardano = "^0.9.0"
retry = "^0.9.2"
pyyaml = "^6.0"
click = "^8.1.3"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-order = "^1.1.0"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"
ruff = "^0.0.277"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
