[tool.poetry]
name = "charli3-offchain-core"
version = "1.8.8"
description = "Offchain core Python package for Charli3"
authors = ["Deep Bhatt <deep.bhatt@charli3.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pycardano = { git = "https://github.com/Charli3-Official/pycardano.git", branch = "chang"}
retry = "^0.9.2"
pyyaml = "^6.0"
click = "^8.1.3"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-order = "^1.1.0"
python-json-logger = "^2.0.7"
pre-commit = "^3.7.0"
aiohttp = "^3.8.4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
